navbar, aligning and year updated, minor fix in code

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@
 body {
     margin : 0;
     text-align: center;
-    padding-top: 0px;
     padding-bottom: 0px;
     font-family: 'Montserrat', sans-serif;
     background-color: #020300;
@@ -29,6 +28,10 @@ h2{
 h3{
     color: #6dc1cf;
     font-family: 'Indie Flower', cursive;
+}
+
+p{
+    padding-top: 10px;
 }
 
 .profile {
@@ -65,7 +68,9 @@ img {
     width : 200px;
     height: 200px;
     word-wrap: break-word;
-    margin-bottom: -60px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .top-container{
@@ -158,10 +163,15 @@ hr{
 
 
 nav ul {
-    margin: 0;
+    margin-top: 20px;
+    height: 100px;
     padding: 0;
-    float: right;
 }
+
+li{
+    float:left;
+}
+
 header nav ul li a {
     dispaly: block;
     color:#fff;
